--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="overlay">
             <div class="text">
                 <h1 class="title white">
-                    Hello Github!
+                    Hello LaHiRu!
                 </h1>
                 <p>your-name :- Lahiru Udawaththa</p>
                 <p>your-age :- 21 Years Old</p>
